added form show and user partial, added styling for forms and completed client side

--- a/views/add_user.html
+++ b/views/add_user.html
@@ -50,24 +50,24 @@
                    <div class="form-group">  
                         <label for="Gender" class="text-light">Gender</label>
                         <div class="radio inline">
-                            <input type="radio" name="Gender" value="Male">
-                            <label for="Gender" class="text-light">Male</label>
+                            <input type="radio" id="Male" name="Gender" value="Male">
+                            <label for="Male" class="radio-label">Male</label>
                         </div> 
                         <div class="radio inline">
-                            <input type="radio" name="Gender" value="Female">
-                            <label for="Gender" class="text-light">Female</label>
+                            <input type="radio" id="Female" name="Gender" value="Female">
+                            <label for="Female" class="radio-label">Female</label>
                         </div>  
                    </div>
 
                    <div class="form-group">  
-                        <label for="Gender" class="text-light">Status</label>
+                        <label for="Status" class="text-light">Status</label>
                         <div class="radio inline">
-                            <input type="radio" name="Status" value="Active">
-                            <label for="Gender" class="text-light">Active</label>
+                            <input type="radio" id="Active" name="Status" value="Active">
+                            <label for="Active" class="radio-label">Active</label>
                         </div> 
                         <div class="radio inline">
-                            <input type="radio" name="Gender" value="Inactive">
-                            <label for="Gender" class="text-light">Inactive</label>
+                            <input type="radio" id="Inactive" name="Status" value="Inactive">
+                            <label for="Inactive" class="radio-label">Inactive</label>
                         </div>  
                     </div>
 
