--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,38 @@
 <%-include('include/_header')%>
 <!--header ends -->
 
+   <!-- Main Site -->
+   <main id="site-main">
+    <div class="container">
+        <div class="box-nav d-flex justify-between">
+            <a href="/add-user" class="border-shadow">
+                <span class="text-gradient">New User <i class="fas fa-user"></i></span>
+            </a>
+        </div>
+
+        <!-- Form -->
+        <form action="/" method="POST">
+            <table class="table">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>ID</th>
+                        <th>Name</th>
+                        <th>@Email</th>
+                        <th>Gender</th>
+                        <th>Status</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <%-include('include/_show')%>   
+                </tbody>
+            </table>
+        </form>
+        <!-- Form ends-->
+    </div><!--container ends-->
+</main>
+<!-- Main Site ends -->
+
 <!-- include footer -->
 <%-include('include/_footer')%>
 <!--footer ends -->
