--- a/views/include/_form.ejs
+++ b/views/include/_form.ejs
@@ -1,5 +1,5 @@
  <!-- Form -->
- <form action="/" method="POST" id="add_user">
+ <form action="/api/users" method="POST" id="add_user">
     <div class="new_user">
         <div class="form-group">
             <label for="Name" class="text-light">Name</label>
