fixed bug in add user form for gender and status value

--- a/views/include/_form.ejs
+++ b/views/include/_form.ejs
@@ -13,11 +13,11 @@
         <div class="form-group">  
              <label for="Gender" class="text-light">Gender</label>
              <div class="radio inline">
-                 <input type="radio" id="Male" name="Gender" value="Male">
+                 <input type="radio" id="Male" name="gender" value="Male">
                  <label for="Male" class="radio-label">Male</label>
              </div> 
              <div class="radio inline">
-                 <input type="radio" id="Female" name="Gender" value="Female">
+                 <input type="radio" id="Female" name="gender" value="Female">
                  <label for="Female" class="radio-label">Female</label>
              </div>  
         </div>
@@ -25,11 +25,11 @@
         <div class="form-group">  
              <label for="Status" class="text-light">Status</label>
              <div class="radio inline">
-                 <input type="radio" id="Active" name="Status" value="Active">
+                 <input type="radio" id="Active" name="status" value="Active">
                  <label for="Active" class="radio-label">Active</label>
              </div> 
              <div class="radio inline">
-                 <input type="radio" id="Inactive" name="Status" value="Inactive">
+                 <input type="radio" id="Inactive" name="status" value="Inactive">
                  <label for="Inactive" class="radio-label">Inactive</label>
              </div>  
          </div>
